--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -742,7 +742,7 @@
                 </svg>
                 <span>My Analysis</span>
             </a>
-            <a href="careers.html" class="nav-link">
+            <a href="#" class="nav-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="lucide lucide-search">
