Test Vercel connection

--- a/frontend/careers.html
+++ b/frontend/careers.html
@@ -432,7 +432,7 @@
         <!-- NEW: "Find Your Fit" Section -->
         <section class="more-content-section">
            
-                <div class="more-content-para"><h1>Find Your Fit: What to Consider</h1>
+                <div class="more-content-para"><h1>Find Your Fit: What to Consider...</h1>
                 <p>Choosing a career is a big decision. Here are a few key factors to think about as you explore your options.</p>
             </div>
         
