--- a/frontend/home_bus.html
+++ b/frontend/home_bus.html
@@ -376,6 +376,7 @@
             cursor: pointer;
             z-index: 100;
             padding: 0.5rem;
+            transform: translateX(-1rem);
         }
 
         .mobile-menu {
@@ -434,6 +435,7 @@
             }
         }
         /* --- MOBILE NAVIGATION STYLES END --- */
+        
     </style>
 </head>
 
